<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="20dp"
    android:background="@color/app_sec_light"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workout_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/workout_item_description"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/workout_muscle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/workout_item_mg"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <TextView
            android:id="@+id/workout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/workout_item_date"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>