...
        android:layout_marginTop="27dp"
        android:layout_marginBottom="17dp"
        android:text="@string/title_workouts"
        android:textColor="@color/app_sec"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/log_new_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
...
