<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/moreFragment" android:title="@string/title_more" android:icon="@drawable/ic_baseline_settings_24"/>
    <item android:id="@+id/workoutsFragment" android:title="@string/title_workouts" android:icon="@drawable/ic_dumbbell"/>
    <item android:id="@+id/exercisesFragment" android:title="@string/title_exercises" android:icon="@drawable/ic_exercises"/>
</menu>